infra/k8s/payment_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
  namespace: food
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: beltawn3507/food_pay
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-srv
  namespace: food
spec:
  selector:
    app: payment
  ports:
    - name: payment
      protocol: TCP
      port: 5002
      targetPort: 5002
