infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-delivery-backend
  namespace: food
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx

  rules:
    - host: food.dev
      http:
        paths:

          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 5000

          - path: /api/restaurant/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rest-srv
                port:
                  number: 5001

          - path: /api/item/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rest-srv
                port:
                  number: 5001

          - path: /api/cart/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rest-srv
                port:
                  number: 5001

          - path: /api/address/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rest-srv
                port:
                  number: 5001

          - path: /api/order/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rest-srv
                port:
                  number: 5001

          - path: /api/rider/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rider-srv
                port:
                  number: 5005

          - path: /api/payment/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-srv
                port:
                  number: 5002

          - path: /api/upload/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-srv
                port:
                  number: 5002

          - path: /api/v1/internal/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: realtime-srv
                port:
                  number: 5004

          - path: /socket.io/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: realtime-srv
                port:
                  number: 5004
